--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -1,15 +1,17 @@
 <resources>
-    <string name="app_name">ORB Mobile</string>
+    <string name="app_name" translatable="false">ORB Mobile</string>
     <string name="pref_title_url">Open Roberta Lab URL</string>
     <string name="pref_title_about">About</string>
     <string name="pref_title_exit">Exit</string>
-
-    <string name="pref_change">Type your new URL for the Open Roberta Lab. Recommended:  http://ip:port</string>
-    <string name="about_app_content">ORB Mobile is developed to ...</string>
-    <string name="version">Version %s</string>
-    <string name="orb_not_connected">not connected</string>
-    <string name="batterie">Batt</string>
-    <string name="msg_cancel">cancel</string>
-    <string name="msg_OK">OK</string>
-    <string name="about_publish">About ....</string>
+    <string name="pref_connect">Connect to Robot</string>
+    <string name="pref_service">Service</string>
+    <string name="pref_configure_orb">Configure ORB</string>
+    <string name="text_change">Type your new URL for the Open Roberta Lab. Recommended:  http://ip:port</string>
+    <string name="text_about_content"><i>ORB-Mobile</i> is an app for controlling robots that are equipped with the <b>O</b>pen <b>R</b>obotics <b>B</b>oard and programmed with <a target="_blank" href="https://www.open-roberta.org/">»Open Roberta Lab«</a> .</string>
+    <string name="text_about_version">Version %s</string>
+    <string name="text_about_publish" translatable="false">Thomas Breuer (Hochschule Bonn-Rhein-Sieg), 2023</string>
+    <string name="text_state_orb_not_connected">Not connected to Robot</string>
+    <string name="text_state_batterie">Batt</string>
+    <string name="btn_cancel">Cancel</string>
+    <string name="btn_OK">OK</string>
 </resources>
