--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">ORB Mobile</string>
-    <string name="pref_title_url">Open Roberta Lab URL</string>
+    <string name="pref_orl">Open Roberta Lab URL</string>
     <string name="pref_title_about">About</string>
     <string name="pref_title_exit">Exit</string>
     <string name="pref_connect">Connect to Robot</string>
@@ -14,4 +14,5 @@
     <string name="text_state_batterie">Batt</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_OK">OK</string>
+    <string name="pref_server">Server</string>
 </resources>
