Welcome page updated (language)

--- a/Project/app/src/main/res/values-b+de/strings.xml
+++ b/Project/app/src/main/res/values-b+de/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="pref_title_about">Über</string>
     <string name="pref_title_exit">Beenden</string>
-    <string name="pref_orl">Open Roberta Lab URL</string>
+    <string name="pref_orl">Open Roberta Lab</string>
     <string name="pref_connect">Mit Roboter verbinden</string>
     <string name="pref_service">Service</string>
-    <string name="pref_configure_orb">ORB konfigurieren</string>
+    <string name="pref_configure_orb">Konfiguration ORB</string>
     <string name="text_about_version">Version %s</string>
     <string name="text_state_orb_not_connected">Roboter nicht verbunden</string>
     <string name="text_state_batterie">Batt</string>
@@ -12,5 +12,11 @@
     <string name="text_about_content"><i>ORB-Mobile</i> ist eine App zur Steuerung von Robotern, die mit dem <b>O</b>pen-<b>R</b>obotic-<b>B</b>oard ausgestattet sind und mit <a target="_blank" href="https://www.open-roberta.org/">»Open Roberta Lab«</a> programmiert werden.</string>
     <string name="btn_cancel">Abbrechen</string>
     <string name="btn_OK">OK</string>
+    <string name="pref_server">Server</string>
+    <string name="toast_usb_connected">USB wurde angeschlossen</string>
+    <string name="toast_usb_deconnected">USB wurde entfernt</string>
+    <string name="label_select_bt_device">Wähle Verbindung zum Roboter</string>
+    <string name="label_configure_orb">ORB Konfiguration</string>
+    <string name="label_monitor_orb">Monitor</string>
 
 </resources>
